Update search experience and st yling to create alignment and fix bugs.

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -117,7 +117,7 @@
 }
 
 .header-container {
-    @apply z-50 bg-white py-6;
+    @apply z-40 bg-white py-6;
     top: -1px;
 
     @screen lg {
@@ -298,10 +298,10 @@
     }
 }
 
-.registry-hero {
+.registry-hero, .docs-hero {
     @apply w-full flex relative flex-col justify-center;
 
-    height: 100px;
+    // height: 100px;
 
     .dot-overlay {
         @apply w-full h-full absolute;
@@ -309,9 +309,9 @@
         background: linear-gradient(to top, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.8) 10%, rgba(255, 255, 255, 0.5004551991695115) 100%);
     }
 
-    .registry-hero-title {
+    .header-hero-title {
         @screen md {
-            @apply flex items-center;
+            @apply items-center;
         }
 
         .title-icon,
@@ -329,7 +329,7 @@
     }
 }
 
-.docs-pinned-container {
+.header-pinned-container {
     width: 315px;
     .get-started-pinned-search-container {
         width: 136px;
